force-app/main/default/objects/ccrz__E_ProductSpec__c/ccrz__E_ProductSpec__c.object-meta.xml
<CustomObject>
    <description>Object used to map products to specifications.  These allows you to associated any number of additional attributes to the product using the common specifications referenced in the Spec table above.</description>
    <label>CC Product Spec</label>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Product Spec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>