force-app/main/default/objects/ccrz__E_ProductSpec__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <label>Product Item</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Product Specs</relationshipLabel>
    <relationshipName>Product_Specs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>