force-app/main/default/objects/ccrz__E_ProductSpec__c/fields/ccrz__ProductID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductID__c</fullName>
    <description>Reference to the product object</description>
    <formula>ccrz__Product__c + &apos;-&apos; +  ccrz__Spec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductID</label>
    <type>Text</type>
</CustomField>