force-app/main/default/objects/ccrz__E_ProductSpec__c/fields/ccrz__Spec__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Spec__c</fullName>
    <description>Reference to the specification object</description>
    <label>Spec</label>
    <referenceTo>ccrz__E_Spec__c</referenceTo>
    <relationshipLabel>Product Specs</relationshipLabel>
    <relationshipName>Product_Specs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>