force-app/main/default/objects/ccrz__E_ProductSpec__c/fields/ccrz__SpecValue__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SpecValue__c</fullName>
    <description>The value that we are associating to this pairing. For example, if the specification is Processor Speed, the value might be 2.4GHz</description>
    <label>SpecValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>