force-app/main/default/objects/ccrz__E_ProductSpec__c/fields/EC_Product_Spec_Id__c.field-meta.xml
<CustomField>
    <fullName>EC_Product_Spec_Id__c</fullName>
    <description>This field serves as an external Id for product specs records and gives ability to upsert</description>
    <externalId>true</externalId>
    <inlineHelpText>This field serves as an external Id for product specs records and gives ability to upsert</inlineHelpText>
    <label>Product Spec Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>