force-app/main/default/objects/ccrz__E_ProductSpec__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__ProductID__c</columns>
    <columns>ccrz__Product__c</columns>
    <columns>ccrz__Spec__c</columns>
    <columns>ccrz__SpecValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__Spec__c</field>
        <operation>equals</operation>
        <value>Color</value>
    </filters>
    <label>All</label>
</ListView>